--- a/MemoriaFlora/ViewControllers/Home/GraveyardTableViewCell.xib
+++ b/MemoriaFlora/ViewControllers/Home/GraveyardTableViewCell.xib
@@ -16,7 +16,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GraveyardTableViewCell" rowHeight="131" id="KGk-i7-Jjw" customClass="GraveyardTableViewCell" customModule="MemoriaFlora" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GraveyardTableViewCell" rowHeight="131" id="KGk-i7-Jjw" customClass="GraveyardTableViewCell" customModule="Caro_Estinto" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="131"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -34,19 +34,19 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forgot Password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k6V-1A-jTY">
-                                <rect key="frame" x="120" y="23" width="246" height="17"/>
+                                <rect key="frame" x="120" y="19" width="246" height="17"/>
                                 <fontDescription key="fontDescription" name="SFProText-Bold" family="SF Pro Text" pointSize="14"/>
                                 <color key="textColor" red="0.2784313725" green="0.2784313725" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forgot Password" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NMy-HN-k0I">
-                                <rect key="frame" x="120" y="46" width="254" height="17"/>
+                                <rect key="frame" x="120" y="42" width="254" height="17"/>
                                 <fontDescription key="fontDescription" name="SFProText-Bold" family="SF Pro Text" pointSize="14"/>
                                 <color key="textColor" red="0.2784313725" green="0.2784313725" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date Of Demise" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n7c-6c-ddl">
-                                <rect key="frame" x="120" y="71" width="254" height="15.666666666666671"/>
+                                <rect key="frame" x="120" y="67" width="254" height="15.666666666666671"/>
                                 <fontDescription key="fontDescription" name="SFProText-Bold" family="SF Pro Text" pointSize="13"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -59,7 +59,7 @@
                             <constraint firstAttribute="trailing" secondItem="k6V-1A-jTY" secondAttribute="trailing" constant="16" id="8Lz-QT-ziG"/>
                             <constraint firstAttribute="trailing" secondItem="NMy-HN-k0I" secondAttribute="trailing" constant="8" id="GTn-9c-GhZ"/>
                             <constraint firstItem="NMy-HN-k0I" firstAttribute="leading" secondItem="k6V-1A-jTY" secondAttribute="leading" id="MjS-xb-b8w"/>
-                            <constraint firstItem="k6V-1A-jTY" firstAttribute="centerY" secondItem="7zg-wp-zRY" secondAttribute="centerY" constant="-26" id="NFT-je-PaZ"/>
+                            <constraint firstItem="k6V-1A-jTY" firstAttribute="centerY" secondItem="7zg-wp-zRY" secondAttribute="centerY" constant="-30" id="NFT-je-PaZ"/>
                             <constraint firstItem="k6V-1A-jTY" firstAttribute="leading" secondItem="7zg-wp-zRY" secondAttribute="trailing" constant="24" id="QyW-4z-eYf"/>
                             <constraint firstAttribute="height" constant="115" id="VNM-0S-NaH"/>
                             <constraint firstItem="7zg-wp-zRY" firstAttribute="centerY" secondItem="r3D-Ej-5MS" secondAttribute="centerY" id="fZb-qm-U2K"/>
