--- a/MemoriaFlora/Storyboards/Flowers.storyboard
+++ b/MemoriaFlora/Storyboards/Flowers.storyboard
@@ -17,7 +17,7 @@
         <!--FlowersVC-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="FlowersVC" id="Y6W-OH-hqX" customClass="FlowersVC" customModule="MemoriaFlora" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FlowersVC" id="Y6W-OH-hqX" customClass="FlowersVC" customModule="Caro_Estinto" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -63,7 +63,7 @@
                                 <cells/>
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7rv-q2-1md" customClass="DesignableButton" customModule="Spring">
-                                <rect key="frame" x="32" y="688" width="329" height="50"/>
+                                <rect key="frame" x="32" y="736" width="329" height="50"/>
                                 <color key="backgroundColor" red="0.47450980390000003" green="0.24313725489999999" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="SoN-wD-K2f"/>
@@ -100,7 +100,7 @@
                         <constraints>
                             <constraint firstItem="m1G-J5-mdH" firstAttribute="top" secondItem="Tax-Up-iRt" secondAttribute="bottom" constant="8" id="13f-X2-2IC"/>
                             <constraint firstItem="S4L-0C-aZl" firstAttribute="top" secondItem="m1G-J5-mdH" secondAttribute="bottom" constant="24" id="5Gv-we-Fva"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="7rv-q2-1md" secondAttribute="bottom" constant="80" id="5mR-mt-JWH"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="7rv-q2-1md" secondAttribute="bottom" constant="32" id="5mR-mt-JWH"/>
                             <constraint firstItem="Tax-Up-iRt" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="A5w-Xw-NVU"/>
                             <constraint firstItem="Tax-Up-iRt" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="32" id="AsW-UQ-Tbx"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="uSm-EI-BhD" secondAttribute="trailing" id="NCg-Oe-tv9"/>
@@ -125,13 +125,13 @@
         <!--Select PaymentVC-->
         <scene sceneID="djs-DD-g5U">
             <objects>
-                <viewController storyboardIdentifier="SelectPaymentVC" id="JvW-8m-OBw" customClass="SelectPaymentVC" customModule="MemoriaFlora" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SelectPaymentVC" id="JvW-8m-OBw" customClass="SelectPaymentVC" customModule="Caro_Estinto" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Yvq-eU-evm">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Payment Method" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YHI-wv-iND">
-                                <rect key="frame" x="78.333333333333329" y="175" width="236.66666666666669" height="25.666666666666657"/>
+                                <rect key="frame" x="65.333333333333343" y="175" width="262.66666666666663" height="26.333333333333343"/>
                                 <fontDescription key="fontDescription" name="SFProText-Bold" family="SF Pro Text" pointSize="22"/>
                                 <color key="textColor" red="0.2784313725" green="0.2784313725" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -308,10 +308,10 @@
     </scenes>
     <designables>
         <designable name="7rv-q2-1md">
-            <size key="intrinsicContentSize" width="151" height="34"/>
+            <size key="intrinsicContentSize" width="165.66666666666666" height="34.333333333333336"/>
         </designable>
         <designable name="or1-CZ-Eje">
-            <size key="intrinsicContentSize" width="61.333333333333336" height="39.666666666666664"/>
+            <size key="intrinsicContentSize" width="64.333333333333329" height="40.333333333333336"/>
         </designable>
     </designables>
     <resources>
