--- a/MemoriaFlora/Storyboards/Details.storyboard
+++ b/MemoriaFlora/Storyboards/Details.storyboard
@@ -29,10 +29,10 @@
                                 <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LcL-yC-acN">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="627"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="628.33333333333337"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PJc-Tj-SGp" customClass="DesignableView" customModule="Spring">
-                                                <rect key="frame" x="20" y="20" width="353" height="473"/>
+                                                <rect key="frame" x="20" y="19.999999999999972" width="353" height="474.33333333333326"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserName" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QCa-q8-TO9">
                                                         <rect key="frame" x="24" y="24.000000000000004" width="264" height="38.333333333333343"/>
@@ -44,7 +44,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Yl-me-jWq" customClass="DesignableView" customModule="Spring">
-                                                        <rect key="frame" x="24" y="108.66666666666663" width="305" height="300"/>
+                                                        <rect key="frame" x="24" y="109.33333333333337" width="305" height="300"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_grave" translatesAutoresizingMaskIntoConstraints="NO" id="Efz-o5-Bnv" customClass="DesignableImageView" customModule="Spring">
                                                                 <rect key="frame" x="0.0" y="0.0" width="305" height="300"/>
@@ -73,10 +73,10 @@
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="m1r-3t-Nmw">
-                                                        <rect key="frame" x="24" y="432.66666666666669" width="305" height="16.333333333333314"/>
+                                                        <rect key="frame" x="24" y="433.33333333333337" width="305" height="17"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eg1-Yg-7GG">
-                                                                <rect key="frame" x="0.0" y="0.0" width="305" height="16.333333333333332"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="305" height="17"/>
                                                                 <fontDescription key="fontDescription" name="SFProText-Regular" family="SF Pro Text" pointSize="14"/>
                                                                 <color key="textColor" red="0.2784313725" green="0.2784313725" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
@@ -97,10 +97,10 @@
                                                         </connections>
                                                     </button>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="PxZ-yV-cnx">
-                                                        <rect key="frame" x="24" y="72.333333333333343" width="305" height="16.333333333333329"/>
+                                                        <rect key="frame" x="24" y="72.333333333333343" width="305" height="17"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date of demise: " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ygh-vo-5kZ">
-                                                                <rect key="frame" x="0.0" y="0.0" width="305" height="16.333333333333332"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="305" height="17"/>
                                                                 <fontDescription key="fontDescription" name="SFProText-Regular" family="SF Pro Text" pointSize="14"/>
                                                                 <color key="textColor" red="0.2784313725" green="0.2784313725" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
@@ -136,7 +136,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AL8-NF-OLg" customClass="DesignableButton" customModule="Spring">
-                                                <rect key="frame" x="44" y="517" width="305" height="50"/>
+                                                <rect key="frame" x="44" y="518.33333333333337" width="305" height="50"/>
                                                 <color key="backgroundColor" red="0.47450980390000003" green="0.24313725489999999" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="ayg-c7-gie"/>
@@ -217,7 +217,7 @@
     </scenes>
     <designables>
         <designable name="AL8-NF-OLg">
-            <size key="intrinsicContentSize" width="164.66666666666666" height="30.333333333333332"/>
+            <size key="intrinsicContentSize" width="182.66666666666666" height="31"/>
         </designable>
         <designable name="Efz-o5-Bnv">
             <size key="intrinsicContentSize" width="368" height="559"/>
